--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
     "compilerOptions": {
         "outDir": "./build",
-        "module": "commonjs",
+        "module": "es6",
         "noImplicitAny": true,
         "removeComments": true,
         "preserveConstEnums": true,
         "sourceMap": true,
-        "target": "es6",
-        "rootDir": "./src"
+        "target": "es5",
+        "rootDir": "./src",
+        "allowJs": true
     },
-	"include" : [
+    "include": [
         "src/**/*"
     ]
 }
