--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,22 @@
 {
     "compilerOptions": {
-        "outDir": "./build",
+        "outDir": "./",
         "module": "es6",
         "noImplicitAny": true,
         "removeComments": true,
         "preserveConstEnums": true,
         "sourceMap": true,
         "target": "es5",
-        "rootDir": "./src",
-        "allowJs": true
+        "rootDir": "./",
+        "allowJs": true,
+        "types": [
+            "babylonjs",
+        ]
     },
     "include": [
-        "src/**/*"
+        "/**/*"
+    ],
+    "exclude": [
+        "node_modules"
     ]
 }
