--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "stats.js": "0.0.14-master"
   },
   "devDependencies": {
+    "cannon": "^0.6.2",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-download": "0.0.1",
     "gulp-livereload": "^3.8.1",
     "gulp-rename": "^1.2.2",
+    "gulp-typescript": "^4.0.0-alpha.1",
     "http": "0.0.0",
     "st": "^1.1.0",
+    "typescript": "^2.6.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
