--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "src/main.js",
   "dependencies": {
-    "babylonjs": "^2.3.0",
+    "@types/stats.js": "^0.17.0",
     "browserify": "^13.0.0",
     "jquery": "^2.2.0",
     "stats.js": "0.0.14-master"
   },
   "devDependencies": {
+    "@types/jquery": "^3.2.18",
+    "babylonjs": "3.1.1",
     "cannon": "^0.6.2",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
@@ -18,6 +20,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-typescript": "^4.0.0-alpha.1",
     "http": "0.0.0",
+    "retyped-babylonjs-tsd-ambient": "^2.2.0-0",
     "st": "^1.1.0",
     "typescript": "^2.6.2",
     "vinyl-buffer": "^1.0.0",
