--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,26 @@
 {
-	"compilerOptions": {
-		"outDir": "./build",
-		"module": "commonjs",
-		"noImplicitAny": false,
-		"removeComments": true,
-		"preserveConstEnums": true,
-		"sourceMap": true,
-		"target": "es6",
-		"rootDir": "./src",
-		"types": [
-			"babylonjs"
-		],
-	},
-	"files": [
-		"./src/main.ts",
-	]
+    "compilerOptions": {
+        "target": "es6",
+        "module": "commonjs",
+        "moduleResolution": "node",
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "preserveConstEnums": true,
+        "suppressImplicitAnyIndexErrors": true,
+        "outDir": "./lib/"
+    },
+    "awesomeTypescriptLoaderOptions": {
+        "useWebpackText": true,
+        "forkChecker": true,
+        "useCache": true
+    },
+    "exclude": [
+        "node_modules",
+        "lib"
+    ],
+    "compileOnSave": true,
+    "buildOnSave": false,
+    "atom": {
+        "rewriteTsconfig": false
+    }
 }
