--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
+  "author": "Leles",
   "devDependencies": {
     "babylonjs": "^3.2.0-alpha4",
     "browser-sync": "^2.26.3",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "clean-webpack-plugin": "^2.0.1",
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.1",
+    "twojs-ts": "^0.7.0-11",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
-  }
+  },
+  "private": true,
+  "main": "index.js"
 }
